<resources>
    <string name="app_name">ViaCepBrasil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="text_register">Don\'t have an account?</string>
    <string name="error_default">Erro desconhecido, tente novamente.</string>
</resources>